--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -44,7 +44,7 @@ body {
 }
 
 .bg-principal{
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/assets/img/bg-film.jpg) no-repeat center;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../assets/img/bg-film.jpg) no-repeat center;
     background-size: cover;
     background-attachment: fixed;
 }
